mob next [ci-skip] [ci skip] [skip ci]
lastFile:index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <section class="content">
     <div class="header">
       <img src="assets/images/logo.svg" alt="">
-      <div class="theme">
+      <div class="theme moon">
         <img id="moon" src="assets/images/icon-moon.svg" alt="Lua" class="icon"> 
         <img id="sun" src="assets/images/icon-sun.svg" alt="Sol" class="icon show"> 
       </div>
