feat/adding new information to script

--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
   <section class="content">
     <div class="header">
       <img src="assets/images/logo.svg" alt="">
+
       <div class="theme">
-        <img id="moon" src="assets/images/icon-moon.svg" alt="Lua" class="icon"> 
-        <img id="sun" src="assets/images/icon-sun.svg" alt="Sol" class="icon show"> 
+        <img id="moon" src="assets/images/icon-moon.svg" alt="Lua" class="icon show"> 
+        <img id="sun" src="assets/images/icon-sun.svg" alt="Sol" class="icon"> 
       </div>
+
     </div>
     <div class="container">
       <h1 class="title-page">
