Creating Function to track active and inactive states

--- a/index.html
+++ b/index.html
@@ -56,7 +56,27 @@
               </label>
           </div>
         </div>
-
+        <div class="card">
+          <div class="card-top">
+            <img class="image" src="assets/images/logo-devlens.svg" alt="">
+            <div class="info">
+              <p class="title">
+                DevLens
+              </p>
+              <span class="description">
+                Quickly inspect page layouts and visualize element boundaries.
+              </span>
+          </div>
+          
+          </div>
+          <div class="buttons">
+              <button class="remove">Remove</button>
+              <label class="switch">
+                <input class="input" type="checkbox" >
+                <span class="slider "></span>
+              </label>
+          </div>
+        </div>
       </div>
     </div>
    
