Update card titles and refactor card visibility functions for improved readability and functionality

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <img class="image" src="assets/images/logo-devlens.svg" alt="">
             <div class="info">
               <p class="title">
-                DevLens
+                DevLens1
               </p>
               <span class="description">
                 Quickly inspect page layouts and visualize element boundaries.
@@ -61,7 +61,7 @@
             <img class="image" src="assets/images/logo-devlens.svg" alt="">
             <div class="info">
               <p class="title">
-                DevLens
+                DevLens2
               </p>
               <span class="description">
                 Quickly inspect page layouts and visualize element boundaries.
@@ -82,7 +82,7 @@
             <img class="image" src="assets/images/logo-devlens.svg" alt="">
             <div class="info">
               <p class="title">
-                DevLens
+                DevLens3
               </p>
               <span class="description">
                 Quickly inspect page layouts and visualize element boundaries.
@@ -103,7 +103,7 @@
             <img class="image" src="assets/images/logo-devlens.svg" alt="">
             <div class="info">
               <p class="title">
-                DevLens
+                DevLens4
               </p>
               <span class="description">
                 Quickly inspect page layouts and visualize element boundaries.
@@ -124,7 +124,7 @@
             <img class="image" src="assets/images/logo-devlens.svg" alt="">
             <div class="info">
               <p class="title">
-                DevLens
+                DevLens5
               </p>
               <span class="description">
                 Quickly inspect page layouts and visualize element boundaries.
@@ -145,7 +145,7 @@
             <img class="image" src="assets/images/logo-devlens.svg" alt="">
             <div class="info">
               <p class="title">
-                DevLens
+                DevLens6
               </p>
               <span class="description">
                 Quickly inspect page layouts and visualize element boundaries.
